attempting to fix flex issue when on mobile 0.8.7

--- a/style.css
+++ b/style.css
@@ -632,7 +632,7 @@ div.credright{
 }
 
 
-  @media only screen and (max-width: 800px) {
+  @media only screen and (max-width: 968px) {
 	body {
 		width: auto !important;
 		border-width: 0px !important;  
@@ -689,6 +689,18 @@ div.credright{
     margin: -2px auto;
     transition: none
 }
+.resultscontainer {
+  flex-direction: column;
+  align-items: center;
+}
+.finaltally {
+  order: 2;
+  width: 80%;
+}
+.compass {
+  order: 1;
+}
+
 }
 
 #userdropdown {
